# tic-tac-toe

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: DrawableCell.h  DrawableTicTacToeBoard.h  drawable_cell.h  drawable_tic_tac_toe_board.h  match.h  symbol.h  symbols.h
src/: DrawableCell.cpp  DrawableTicTacToeBoard.cpp  drawable_cell.cpp  drawable_tic_tac_toe_board.cpp  main.cpp  match.cpp
